--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -21,6 +21,23 @@ ClockInOutAction.6=CLOCK OUT
 ClockInOutAction.7=CANCEL
 ClockInOutAction.8=User 
 Clockout=Clock Out
+SalesReport.0=sales_sub_report
+SalesReport.1=sales_sub_report
+SalesReport.2=reportTitle
+SalesReport.3================================== Sales Report ================================
+SalesReport.4=reportTime
+SalesReport.5=dateRange
+SalesReport.6=\ to 
+SalesReport.7=terminalName
+SalesReportModel.1=Name
+SalesReportModel.2=Price
+SalesReportModel.3=QTY
+SalesReportModel.4=Tax
+SalesReportModel.5=Total
+SalesStatistics.1=Guest
+SalesSummaryDAO.0=MISC
+SalesSummaryDAO.1=FOOD SALES
+SalesSummaryDAO.2=NON FOOD SALES
 Shutdown=Shutdown
 DINE_IN=DINE IN
 TAKE_OUT=TAKE OUT
@@ -56,6 +73,7 @@ CashierSwitchBoardView.LABEL_ORDER=ORDER
 
 BACK_OFFICE_BUTTON_TEXT=BACK OFFICE
 BackOfficeWindow.0=Help
+BaseMenuModifierGroupDAO.0=name
 INVENTORY_MENU_TEXT=Inventory
 NEW_ORDER_BUTTON_TEXT=NEW
 EDIT_TICKET_BUTTON_TEXT=EDIT
@@ -76,6 +94,19 @@ ActionHistory.9=PAY OUT
 ActionHistoryDAO.0=Error occured while trying to save action history
 AUTHORIZE_BUTTON_TEXT=AUTHORIZE
 KITCHEN_DISPLAY_BUTTON_TEXT=KITCHEN DISPLAY
+KitchenDisplayView.0=KD
+KitchenDisplayView.4=Filters
+KitchenDisplayView.5=Printer
+KitchenDisplayView.6=Order type
+KitchenDisplayView.7=LOG OUT
+KitchenTicketStatusSelector.0=Kitchen item status selector
+KitchenTicketStatusSelector.1=Select item status
+KitchenTicketView.11=DONE
+KitchenTicketView.12=VOID
+KitchenTicketView.13=Name
+KitchenTicketView.14=Qty
+KitchenTicketView.16=Confirm 
+KitchenTicketView.18=Confirm
 PAYOUT_BUTTON_TEXT=PAYOUT
 ORDER_INFO_BUTTON_TEXT=ORDER INFO
 REOPEN_TICKET_BUTTON_TEXT=REOPEN
@@ -113,6 +144,7 @@ NewBarTabAction.6=\ will be booked. Proceed?
 NewBarTabAction.7=Please confirm
 NewBarTabAction.8=Bar tab created with ID: 
 NewBarTabAction.9=Unable to authorize card.
+NumericKeypad.0=CLEAR
 
 DINE_IN_BUTTON_TEXT=DINE IN
 TAKE_OUT_BUTTON_TEXT=TAKE OUT
@@ -133,6 +165,7 @@ ALIAS_LABEL=Alias
 CANCEL_BUTTON_TEXT=CANCEL
 SAVE_BUTTON_TEXT=SAVE
 PAY_BUTTON_TEXT=PAY
+PayrollReportView.0=PayrollReport
 
 TICKET_LIST_COLUMN_ID=ID
 TICKET_LIST_COLUMN_TABLE=TBL
@@ -255,11 +288,16 @@ LABEL_SALES_PRICE_INCLUDING_TAX=Sales Price (Including Tax)
 LABEL_TAX=Tax
 MenuItemDAO.0=Error occured while finding food items
 MenuItemDAO.1=Error occured while finding food items
+MenuItemExplorer.0=< ALL >
+MenuItemExplorer.1=Search
 MenuItemExplorer.16=Name : 
 MenuItemExplorer.17=Group : 
 MenuItemExplorer.18=< ALL >
 MenuItemExplorer.19=Search
+MenuItemExplorer.2=Name : 
 MenuItemExplorer.21=Search
+MenuItemExplorer.21=Search
+MenuItemExplorer.3=Group : 
 MenuItemForm.SAMPLE_TEXT=SAMPLE TEXT
 MenuItemForm.lblBarcode.text=Barcode
 MenuItemForm.lblButtonColor.text=Button color
@@ -269,9 +307,14 @@ MenuItemForm.lblTranslatedName.text=Translated name
 MerchantGateway.0=Authorize.net
 MerchantGateway.1=Mercury Pay
 MessageDialog.0=Error
+MessageDialog.0=Error
+MessageDialog.1=Error
 MessageDialog.1=Error
 MessageDialog.2=Error
+MessageDialog.2=Error
 MessageDialog.3=An unexpected error has occured, you may need to restart the application
+MessageDialog.3=An unexpected error has occured, you may need to restart the application
+MessageDialog.4=Error
 MessageDialog.4=Error
 POSConstants.TAX_EXPLORER=Tax Explorer
 POSConstants.TICKET_DELIVERY_DATE=DELIVERY DATE
@@ -631,11 +674,15 @@ PosMessage.98=Configure
 PosMessage.99=TICKET DETAIL
 PosMessage.Error=Error
 PosMessage.TERMINAL_SETUP=TERMINAL SETUP
+PosPrintService.4=User: 
 PrintConfigurationView.0=No printer is installed on your operating system. Please install printer and come back again.
 PrintConfigurationView.11=Kitchen Printers
 PrintConfigurationView.13=Printer Groups
 PrintConfigurationView.4=Report Printer
 PrintConfigurationView.8=Receipt Printer:
+QwertyKeyPad.0=SPACE
+QwertyKeyPad.1=SPACE
+QwertyKeyPad.2=CAPS
 RECEIPT_REPORT_CHANGEAMOUNT_LABEL=Change Due 
 RECEIPT_REPORT_DATE_LABEL=Printed\: 
 RECEIPT_REPORT_DISCOUNT_LABEL=Discount 
@@ -654,6 +701,12 @@ RECEIPT_REPORT_TERMINAL_LABEL=Terminal\#\:
 RECEIPT_REPORT_TICKET_NO_LABEL=CHK\#\: 
 RECEIPT_REPORT_TIPS_LABEL=Tips 
 RECEIPT_REPORT_TOTAL_LABEL=Total 
+ReceiptPrintService.0=Customer: 
+ReceiptPrintService.111=Pickup from hotel
+ReceiptPrintService.115=*** KITCHEN RECEIPT *** 
+ReceiptPrintService.119=Printed: 
+ReportUtil.8=Could not load report 
+ReportViewer.0=Report Type
 RestaurantConfigurationView.11=Address line 2
 RestaurantConfigurationView.15=Address line 3
 RestaurantConfigurationView.19=ZIP code
@@ -671,6 +724,7 @@ SORT_ORDER=Sort Order
 SelectionView.0=BACK
 SelectionView.1=NEXT
 SelectionView.2=PREV
+ServerProductivityReportView.12=server_productivity_report
 SettleTicketAction.0=Ticket is already settled
 Switchboard.0=Welcome
 Switchboard.1=TICKETS AND ACTIVITY
@@ -734,10 +788,32 @@ TERMINAL_LABEL=Terminal
 TerminalConfigurationView.0=Show translated item name in UI
 TerminalConfigurationView.1=Kiosk Mode
 TerminalConfigurationView.10=Print to kitchen on order finish
+TerminalConfigurationView.11=TEST
 TerminalConfigurationView.12=Print to kitchen on order settle
+TerminalConfigurationView.13=COM1
 TerminalConfigurationView.14=Terminal number is not valid
+TerminalConfigurationView.15=This terminal has cash drawer
+TerminalConfigurationView.18=TOUCH SCREEN
+TerminalConfigurationView.19=Button height
+TerminalConfigurationView.2=Show translated item name in UI
+TerminalConfigurationView.20=Button font size
+TerminalConfigurationView.22=CASH DRAWER
+TerminalConfigurationView.25=Drawer port
+TerminalConfigurationView.27=Drawer control codes
+TerminalConfigurationView.29=
+TerminalConfigurationView.3=Kiosk Mode
+TerminalConfigurationView.32=RESTORE DEFAULT
+TerminalConfigurationView.34=Drawer initial balance
+TerminalConfigurationView.38=Please make sure button size is at least 20
+TerminalConfigurationView.39=Please make sure button font size is at least 8
+TerminalConfigurationView.4=Show prompt to confirm ticket settlement
+TerminalConfigurationView.40=Please restart system for the configuration to take effect
+TerminalConfigurationView.47=Terminal
+TerminalConfigurationView.5=Show database configuration button on login screen
 TerminalConfigurationView.6=Print receipt on order finish
+TerminalConfigurationView.7=Enable auto logoff
 TerminalConfigurationView.8=Print receipt on order settle
+TerminalConfigurationView.9=Default password length
 TerminalConfigurationView.TERMINAL_NUMBER=Terminal number\:
 TerminalSetupDialog.0=Setup this terminal
 TerminalSetupDialog.10=Save
@@ -746,6 +822,10 @@ TerminalSetupDialog.4=Save
 TerminalSetupDialog.6=Close
 TicketImportConfigurationView.4=Ticket import api URL
 TicketImportConfigurationView.6=Poll interval (in second)
+TimeSelector.0=Hour:
+TimeSelector.1=Min:
+TimeSelector.11=PM
+TimeSelector.9=AM
 Translated_Name=Translated Name
 UPDATE_DATABASE=UPDATE DATABASE
 User.0=MANAGER
@@ -764,8 +844,12 @@ UserDAO.7=Another user with same ID already exists
 UserDAO.8=Could not save user
 UserDAO.9=select count(*) from Ticket ticket where ticket.owner=:owner and ticket.
 UserListDialog.0=SELECT USER
+UserListDialog.0=SELECT USER
 UserListDialog.1=SELECT
+UserListDialog.3=SELECT
 UserListDialog.4=Please select user
+UserListDialog.4=Please select user
+UserListDialog.5=CANCEL
 UserListDialog.5=CANCEL
 UserPermission.0=Create New Ticket
 UserPermission.1=View All Open Ticket
