--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -25,6 +25,7 @@ SalesReport.0=sales_sub_report
 SalesReport.1=sales_sub_report
 SalesReport.2=reportTitle
 SalesReport.3================================== Sales Report ================================
+SalesReport.3================================== Sales Report ================================
 SalesReport.4=reportTime
 SalesReport.5=dateRange
 SalesReport.6=\ to 
@@ -42,6 +43,7 @@ Shutdown=Shutdown
 DINE_IN=DINE IN
 TAKE_OUT=TAKE OUT
 PICKUP=PICKUP
+HeaderPanel.0=Auto logoff in 
 HeaderPanel.6=Auto logoff in 
 HOME_DELIVERY=HOME DELIVERY
 DRIVE_THRU=DRIVE THRU
@@ -69,6 +71,16 @@ CardConfigurationView.9=Default Card Entry Method
 CardReader.0=Swipe
 CardReader.1=Manual
 CardReader.2=External Terminal
+CashDropDialog.1=ACTIVE CASH DROPS FOR
+CashDropDialog.11=ACTIVE CASH DROPS FOR TERMINAL
+CashDropDialog.16=An error has occured while deleting cash drop
+CashDropDialog.17=DRAWER BLEED AMOUNT
+CashDropDialog.18=An error has occured while saving cash drop
+CashDropDialog.2=Drawer Bleed
+CashDropDialog.3=REMOVE CASH FROM DRAWER
+CashDropDialog.4=NEW DRAWER BLEED
+CashDropDialog.5=DELETE SELECTED
+CashDropDialog.6=CLOSE
 CashierSwitchBoardView.LABEL_ORDER=ORDER
 
 BACK_OFFICE_BUTTON_TEXT=BACK OFFICE
@@ -79,7 +91,10 @@ NEW_ORDER_BUTTON_TEXT=NEW
 EDIT_TICKET_BUTTON_TEXT=EDIT
 GROUP_SETTLE_BUTTON_TEXT=GROUP SETTLE
 MANAGER_BUTTON_TEXT=MANAGER
+ManagerDialog.1=NO SALE
 AboutAction.0=About
+AboutDialog.0=About
+AboutDialog.5=OK
 ActionHistory.0=NEW CHECK
 ActionHistory.1=EDIT CHECK
 ActionHistory.10=PAY TIPS
@@ -99,6 +114,7 @@ KitchenDisplayView.4=Filters
 KitchenDisplayView.5=Printer
 KitchenDisplayView.6=Order type
 KitchenDisplayView.7=LOG OUT
+KitchenDisplayWindow.0=Kitchen Display
 KitchenTicketStatusSelector.0=Kitchen item status selector
 KitchenTicketStatusSelector.1=Select item status
 KitchenTicketView.11=DONE
@@ -120,6 +136,7 @@ VirtualPrinterConfigDialog.4=Virtual Printer Name
 VirtualPrinterConfigDialog.9=OK
 VOID_TICKET_BUTTON_TEXT=VOID
 VoidTicketAction.0=Enter or scan ticket id
+VoidTicketDialog.9=There was an error while printing void information to kitchen\n
 REFUND_BUTTON_TEXT=REFUND
 ASSIGN_DRIVER_BUTTON_TEXT=ASSIGN DRIVER
 CLOSE_ORDER_BUTTON_TEXT=CLOSE
@@ -127,6 +144,9 @@ MORE_ACTIVITY_BUTTON_TEXT=MORE
 LESS_ACTIVITY_BUTTON_TEXT=LESS
 TABLE_MANAGE_BUTTON_TEXT=TABLE MANAGE
 ONLINE_TICKET_BUTTON_TEXT=ONLINE TICKETS
+OpenTicketsListDialog.0=What do you want to do next?
+OpenTicketsListDialog.6=To be implemented
+OpenTicketSummaryReport.0============================= Open Ticket Summary =============================
 
 SEARCH_ITEM_BUTTON_TEXT=SEARCH ITEM
 
@@ -144,12 +164,14 @@ NewBarTabAction.6=\ will be booked. Proceed?
 NewBarTabAction.7=Please confirm
 NewBarTabAction.8=Bar tab created with ID: 
 NewBarTabAction.9=Unable to authorize card.
+NumberSelectionView.16=CLEAR
 NumericKeypad.0=CLEAR
 
 DINE_IN_BUTTON_TEXT=DINE IN
 TAKE_OUT_BUTTON_TEXT=TAKE OUT
 PICKUP_BUTTON_TEXT=PICKUP
 HOME_DELIVERY_BUTTON_TEXT=HOME DELIVERY
+HourlyLaborReportView.0=60 Minute
 DRIVE_THRU_BUTTON_TEXT=DRIVE THRU
 BAR_TAB_BUTTON_TEXT=BAR TAB
 BOMessageDialog.0=Error
@@ -165,6 +187,15 @@ ALIAS_LABEL=Alias
 CANCEL_BUTTON_TEXT=CANCEL
 SAVE_BUTTON_TEXT=SAVE
 PAY_BUTTON_TEXT=PAY
+PasswordEntryDialog.11=CLEAR
+PasswordEntryDialog.12=CLEAR ALL
+PasswordEntryDialog.25=CLEAR
+PasswordEntryDialog.30=Wrong password, please try again.
+PaymentTypeSelectionDialog.0=Select payment type
+PaymentTypeSelectionDialog.4=CREDIT CARD
+PaymentTypeSelectionDialog.6=DEBIT CARD
+PaymentTypeSelectionDialog.8=CANCEL
+PayoutDialog.2=TOTAL
 PayrollReportView.0=PayrollReport
 
 TICKET_LIST_COLUMN_ID=ID
@@ -220,6 +251,19 @@ CouponAndDiscount.3=Fixed Per Order
 CouponAndDiscount.4=Percentage Per Category
 CouponAndDiscount.5=Percentage Per Item
 CouponAndDiscount.6=Percentage Per Order
+CouponAndDiscountDialog.14=Coupon/Discount Name
+CouponAndDiscountDialog.16=Coupon/Discount Number
+CouponAndDiscountDialog.18=Coupon/Discount Type
+CouponAndDiscountDialog.20=Coupon/Discount Value
+CouponAndDiscountDialog.22=Enter Value
+CouponAndDiscountDialog.24=TOTAL DISCOUNT
+CouponAndDiscountDialog.27=CouponAndDiscount amount is not valid
+CouponAndDiscountDialog.28=Enter value
+CouponAndDiscountDialog.29=Please select a coupon/discount
+CouponAndDiscountDialog.3=Select Coupon/Discount
+CouponAndDiscountDialog.6=CANCEL
+CouponAndDiscountDialog.9=OK
+CreditCardReportView.0========== CREDIT CARD REPORT ==========
 DEFAULT_TIPS_PERCENTAGE=Default Tips Percentage
 Database.DERBY_SERVER=Derby Server
 Database.DERBY_SINGLE=Derby Single
@@ -262,6 +306,11 @@ DataExportAction.3=Confirm
 DataExportAction.4=Saved\!
 DataImportAction.0=Import Menu Items
 DataImportAction.1=Success\!
+DiscountListDialog.18=Name
+DiscountListDialog.19=Rule
+DiscountListDialog.2=An error occured while delete.
+DiscountListDialog.20=Amount
+DiscountListDialog.5=Delete Selected
 DrawerAssignedHistory.0=ASSIGN
 DrawerAssignedHistory.1=CLOSE
 DrawerAssignmentAction.0=ASSIGN DRAWER
@@ -278,6 +327,27 @@ DrawerAssignmentAction.8=Drawer is assigned to
 DrawerAssignmentAction.9=CLOSE DRAWER
 DrawerPullConfigurationView.MINUTE=Min
 DrawerPullConfigurationView.RESTART_MESSAGE=You must restart POS for the Auto drawer pull change to take effect
+DrawerPullReportDialog.0=CLOSE
+DrawerPullReportDialog.100=REASON
+DrawerPullReportDialog.101=WASTE
+DrawerPullReportDialog.102=AMOUNT
+DrawerPullReportDialog.105=TOTAL WASTE
+DrawerPullReportDialog.106=TOTAL VOIDS
+DrawerPullReportDialog.107==== DISCOUNTS/COUPONS ===
+DrawerPullReportDialog.110=TOTAL DISCOUNT/COUPON
+DrawerPullReportDialog.112=TOTAL COUNT
+DrawerPullReportDialog.113=TOTAL Dsct
+DrawerPullReportDialog.114=TOTAL Sales
+DrawerPullReportDialog.115=TOTAL Guest
+DrawerPullReportDialog.116=Party Size
+DrawerPullReportDialog.117=Check Size
+DrawerPullReportDialog.118=Count [%]
+DrawerPullReportDialog.120=Ration
+DrawerPullReportDialog.122=Error while printing\n
+DrawerPullReportDialog.15=DRAWER PULL
+DrawerPullReportDialog.16=TERMINAL \#: 
+DrawerPullReportDialog.8=PRINT
+DrawerPullReportDialog.99=CODE
 LABEL_BUY_PRICE=Buy Price
 LABEL_DISCOUNT_RATE=Discount Rate
 LABEL_GROUP=Group
@@ -466,6 +536,14 @@ PosMessage.225=Check
 PosMessage.226=Settle Time
 PosMessage.227=From
 MISC_BUTTON_TEXT=MISC
+MiscTicketItemDialog.0=Miscellaneous item entry
+MiscTicketItemDialog.1=Please intsert item name
+MiscTicketItemDialog.12=Tax
+MiscTicketItemDialog.15=Printer group
+MiscTicketItemDialog.22=Please intsert valid item price
+MiscTicketItemDialog.4=Insert miscellaneous item
+MiscTicketItemDialog.6=Item name
+MiscTicketItemDialog.9=Item price
 ModelBrowser.0=NEW
 ModelBrowser.1=EDIT
 ModelBrowser.2=SAVE
@@ -626,6 +704,7 @@ CustomerSelectionDialog.27=Please select a customer
 CustomerSelectionDialog.28=SELECT
 CustomerSelectionDialog.29=CANCEL
 CustomerSelectionDialog.32=Confirm
+JournalReportView.0========== JOURNAL REPORT ==========
 PosMessage.62=General
 PosMessage.63=Group
 PosMessage.64=Rate
@@ -662,6 +741,15 @@ TABLE_NO_BUTTON_TEXT=TABLE
 TableBrowser.0=TABLE NUMBER
 TableBrowser.1=CAPACITY
 TableBrowser.2=NAME
+TableSelectionDialog.0=Enter table number
+TableSelectionDialog.15=CLEAR
+TableSelectionDialog.32=NEXT
+TableSelectionDialog.37=Added Tables
+TableSelectionDialog.38=REMOVE
+TableSelectionDialog.39=Please insert valid table number
+TableSelectionDialog.40=There is no table with that number.
+TableSelectionDialog.41=Table number 
+TableSelectionDialog.43=Table number 
 TaxConfigurationView.0=Tax
 TaxConfigurationView.4=Item sales price includes tax
 PosMessage.92=Name is required
@@ -702,9 +790,19 @@ RECEIPT_REPORT_TICKET_NO_LABEL=CHK\#\:
 RECEIPT_REPORT_TIPS_LABEL=Tips 
 RECEIPT_REPORT_TOTAL_LABEL=Total 
 ReceiptPrintService.0=Customer: 
+ReceiptPrintService.1=Total Refund
+ReceiptPrintService.10=KTICHEN RECEIPT
 ReceiptPrintService.111=Pickup from hotel
 ReceiptPrintService.115=*** KITCHEN RECEIPT *** 
 ReceiptPrintService.119=Printed: 
+ReceiptPrintService.2=Cash Refund
+ReceiptPrintService.3=*** PAYMENT RECEIPT ***
+ReceiptPrintService.4=Customer Copy
+ReceiptPrintService.5=Merchant Copy
+ReceiptPrintService.6=*** PAYMENT RECEIPT ***
+ReceiptPrintService.7=Merchant Copy
+ReceiptPrintService.8=Customer Copy
+ReceiptPrintService.9=*Delivery to*
 ReportUtil.8=Could not load report 
 ReportViewer.0=Report Type
 RestaurantConfigurationView.11=Address line 2
@@ -724,6 +822,7 @@ SORT_ORDER=Sort Order
 SelectionView.0=BACK
 SelectionView.1=NEXT
 SelectionView.2=PREV
+ServerProductivityReportView.0========== SERVER PRODUCTIVITY REPORT ==========
 ServerProductivityReportView.12=server_productivity_report
 SettleTicketAction.0=Ticket is already settled
 Switchboard.0=Welcome
@@ -793,6 +892,8 @@ TerminalConfigurationView.12=Print to kitchen on order settle
 TerminalConfigurationView.13=COM1
 TerminalConfigurationView.14=Terminal number is not valid
 TerminalConfigurationView.15=This terminal has cash drawer
+TerminalConfigurationView.16=Auto logoff time
+TerminalConfigurationView.17=Default font
 TerminalConfigurationView.18=TOUCH SCREEN
 TerminalConfigurationView.19=Button height
 TerminalConfigurationView.2=Show translated item name in UI
@@ -820,12 +921,60 @@ TerminalSetupDialog.10=Save
 TerminalSetupDialog.12=Close
 TerminalSetupDialog.4=Save
 TerminalSetupDialog.6=Close
+TicketAuthorizationDialog.0=Authorize tickets
+TicketAuthorizationDialog.1=Confirm
+TicketAuthorizationDialog.10=. The record may be broken.
+TicketAuthorizationDialog.2=Please select transactions to authorize
+TicketAuthorizationDialog.3=Selected transactions will be authorized.
+TicketAuthorizationDialog.4=Authorized.
+TicketAuthorizationDialog.5=Nothing to authorize.
+TicketAuthorizationDialog.6=Authorize all transactions?
+TicketAuthorizationDialog.7=Authorized.
+TicketAuthorizationDialog.8=Enter tips amount
+TicketAuthorizationDialog.9=No input information found for transaction id = 
+TicketFilterDialog.0=Select ticket filters
 TicketImportConfigurationView.4=Ticket import api URL
 TicketImportConfigurationView.6=Poll interval (in second)
+TicketListView.10=\ (DRIVER NOT ASSIGNED)
+TicketListView.11=\ (DRIVER ASSIGNED)
+TicketListView.12=VOID
+TicketListView.13=\ (CLOSED)
+TicketListView.14=Please select a ticket
+TicketListView.3=REFRESH
+TicketListView.4=PREVIOUS
+TicketListView.5=NEXT
+TicketListView.6=Guest
+TicketListView.8=PAID
+TicketListView.9=OPEN
 TimeSelector.0=Hour:
 TimeSelector.1=Min:
 TimeSelector.11=PM
 TimeSelector.9=AM
+TipsCashoutReportDialog.28=PRINT
+TipsCashoutReportDialog.29=CLOSE
+TipsCashoutReportDialog.30=CLOSE
+TipsCashoutReportDialog.31=PRINT
+TipsCashoutReportDialog.32=Could not print\n
+TransactionCompletionDialog.0=PRINT
+TransactionCompletionDialog.14=PAID AMOUNT
+TransactionCompletionDialog.19=DUE AMOUNT
+TransactionCompletionDialog.25=GRATUITY AMOUNT
+TransactionCompletionDialog.3=TOTAL AMOUNT
+TransactionCompletionDialog.31=CHANGE DUE
+TransactionCompletionDialog.37=CLOSE
+TransactionCompletionDialog.38=PRINT STORE COPY
+TransactionCompletionDialog.39=There was an error while printing.
+TransactionCompletionDialog.40=PRINT STORE & MERCHANT COPY
+TransactionCompletionDialog.41=There was an error while printing.
+TransactionCompletionDialog.8=TENDERED AMOUNT
+TransactionListView.0=TRANSACTION ID
+TransactionListView.1=TICKET ID
+TransactionListView.2=SERVER
+TransactionListView.3=CARD TYPE
+TransactionListView.4=TIPS
+TransactionListView.5=AMOUNT
+TransactionListView.6=TOTAL
+TransactionListView.7=Please select an item
 Translated_Name=Translated Name
 UPDATE_DATABASE=UPDATE DATABASE
 User.0=MANAGER
@@ -843,6 +992,30 @@ UserDAO.4=from User u where u.userId=:userId and u.type=:userType
 UserDAO.7=Another user with same ID already exists
 UserDAO.8=Could not save user
 UserDAO.9=select count(*) from Ticket ticket where ticket.owner=:owner and ticket.
+UserForm.0=Driver
+UserForm.14=First Name
+UserForm.16=Last Name
+UserForm.18=Secret Key
+UserForm.20=Confirm Secret Key
+UserForm.28=Cost Per Hour
+UserForm.31=User Type
+UserForm.33=Manager
+UserForm.34=Cashier
+UserForm.35=Server
+UserForm.37=Edit User
+UserForm.38=Add new user
+UserForm.39=User with ID: 
+UserForm.41=Could not save user
+UserForm.42=ID is not valid
+UserForm.43=First name cannot be empty
+UserForm.44=Last name cannot be empty
+UserForm.45=Secret key cannot be empty
+UserForm.46=Secret key cannot be empty
+UserForm.47=Secret key did not match
+UserForm.48=Secret key must be unique. An user with the secret key already exists.
+UserForm.49=Cost per hour for 
+UserForm.7=ID
+UserForm.9=Phone
 UserListDialog.0=SELECT USER
 UserListDialog.0=SELECT USER
 UserListDialog.1=SELECT
